# cpl

./: .gitignore  Cargo.toml  Readme.md
Misc/: Food.csv  Trish Library.xlsx  Trish iTunes Library.xlsx  blah.txt  budget_out.csv  claire.xlsx  claire_skips.txt  claire_xx1.txt  claire_xx_stats.csv  claire_xx_stats.xlsx  cpl.bnf  dump.csv  dump.xlsx  dups.csv  dups_stats.csv  dups_stats_01.xlsx  dups_stats_2.csv  every.csv  every_test.txt  function_call_ruminations  function_call_ruminations.txt  goodbye.html  iTunes Library.xlsx  junk.csv  junk.txt  skips.txt  skips_claire.txt  slept.htm  transitions.txt  transitions_with_look_ahead
aa_test_scripts/: alltests01.sh  alltests01.txt  exit_code_test.sh  runall.sh
abend/: Cargo.toml
allcplcode/cplincludes/: month_name_to_number.cpl
allcplcode/cplperform/: loop_tst_foreach.cpl  loop_tst_loop.cpl  loop_tst_while.cpl  substr.cpl
allcplcode/cplpgms/: budget.cpl  budget_x.cpl  csv.cpl  dups.cpl  dups2.cpl  trans.cpl
allcplcode/cpltests/: cpltest_array00.cpl  cpltest_assign_update.cpl  cpltest_basic_arithmetic.cpl  cpltest_basic_array.cpl  cpltest_basic_assign.cpl  cpltest_basic_break.cpl  cpltest_basic_continue.cpl  cpltest_basic_dict.cpl  cpltest_basic_eq_ne.cpl  cpltest_basic_eval.cpl  cpltest_basic_exit.cpl  cpltest_basic_exp.cpl  cpltest_basic_fc.cpl  cpltest_basic_foreach.cpl  cpltest_basic_if.cpl  cpltest_basic_literal.cpl  cpltest_basic_loop.cpl  cpltest_basic_lvalue.cpl  cpltest_basic_matrix.cpl  cpltest_basic_multi_level_struct.cpl  cpltest_basic_return.cpl  cpltest_basic_string.cpl  cpltest_basic_struct.cpl  cpltest_basic_unary.cpl  cpltest_basic_while00.cpl  cpltest_basic_while01.cpl  cpltest_basic_while_break.cpl  cpltest_basic_while_continue.cpl  cpltest_break_continue.cpl  cpltest_break_continue_foreach.cpl  cpltest_break_continue_while.cpl  cpltest_builtin_append_sort.cpl  cpltest_builtin_delete.cpl  cpltest_builtin_insert.cpl  cpltest_builtin_insert_delete_contains.cpl  cpltest_builtin_io.cpl  cpltest_builtin_length.cpl  cpltest_builtin_locate.cpl  cpltest_builtin_match_substr.cpl  cpltest_builtin_push_pop.cpl  (+43 more)
allsources/: abend.rs  builtin.rs  cli.rs  codeframe.rs  codegen.rs  cplvar.rs  csvparser.rs  exec.rs  itop.rs  literalmodel.rs  machine_instruction.rs  macrolib.rs  main.rs  model.rs  modelstructs.rs  names.rs  opcode.rs  parser.rs  runtimestats.rs  structmodel.rs  symboltable.rs  tokenizer.rs  transitions.rs  transitions.txt
builtin/: Cargo.toml
cli/: Cargo.toml
codeframe/: Cargo.toml
codegen/: Cargo.toml
cplvar/: Cargo.toml
csvparser/: Cargo.toml
exec/: Cargo.toml
itop/: Cargo.toml
literalmodel/: Cargo.toml
machineinstruction/: Cargo.toml
macrolib/: Cargo.toml
model/: Cargo.toml
modelstructs/: Cargo.toml
names/: Cargo.toml
opcode/: Cargo.toml
parser/: Cargo.toml
runtimestats/: Cargo.toml
structmodel/: Cargo.toml
symboltable/: Cargo.toml
testdata/: cpltest_basic_predicate.csv  cpltest_builtin_io_output.xml  cpltest_builtin_read_csv.csv  cpltest_builtin_read_eof.csv  csvtest.csv  every_out.csv  every_out.xlsx  every_test2.txt
tokenizer/: Cargo.toml
