[package]
name = "builtin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cplvar = { path = "../cplvar" }
macrolib = { path = "../macrolib" }
regex = "1.11.0"

[lib]
name="builtin"
path="../allsources/builtin.rs"