[package]
name = "itop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../cli" }
tokenizer = { path = "../tokenizer" }
macrolib = { path = "../macrolib" }

[lib]
name="itop"
path="../allsources/itop.rs"